force-app/main/default/objects/ServiceContract/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>created this as part of user story 14108</description>
    <label>Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Office</valueSetName>
    </valueSet>
</CustomField>