force-app/main/default/objects/ServiceContract/fields/SVMXA360__CanceledOn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CanceledOn__c</fullName>
    <description>This field indicates when the Contract’s Status was changed to Canceled</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field indicates when the Contract’s Status was changed to Canceled</inlineHelpText>
    <label>Canceled On</label>
    <type>Date</type>
</CustomField>