force-app/main/default/objects/ServiceContract/fields/SVMXA360__ContractAuthoringStatus__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContractAuthoringStatus__c</fullName>
    <description>Indicates the authoring status of the contract.</description>
    <label>Contract Availability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>AuthoringCompleted</fullName>
                <label>Authoring Completed</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>OnHold</fullName>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Cancel</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>