force-app/main/default/objects/ServiceContract/fields/SVMXA360__ExpectedCost__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpectedCost__c</fullName>
    <description>This roll-up of the Expected Cost in Contract Line Item.</description>
    <label>Expected Cost</label>
    <summarizedField>ContractLineItem.SVMXA360__ExpectedCost__c</summarizedField>
    <summaryForeignKey>ContractLineItem.ServiceContractId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>