force-app/main/default/objects/ServiceContract/fields/SVMXA360__ServiceContractPlanId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceContractPlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup indicating the Service Contract Plan used to create the Service Contract and its Entitlements.</description>
    <label>Service Contract Plan</label>
    <referenceTo>SVMXA360__ServiceContractPlan__c</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>