force-app/main/default/objects/ServiceContract/fields/SVMXA360__StatusNotes__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__StatusNotes__c</fullName>
    <description>This field is used to capture notes when the Contract status is updated.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is used to capture notes when the Contract Availability Status is updated.</inlineHelpText>
    <label>Availability Status Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>