force-app/main/default/objects/ServiceContract/validationRules/EndDateGreaterThanStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateGreaterThanStartDate</fullName>
    <active>true</active>
    <description>ADO user story # 12319
This validation rule is there to ensure that end date cannot be earlier than start date.</description>
    <errorConditionFormula>EndDate  &lt;  StartDate</errorConditionFormula>
    <errorMessage>End Date cannot be earlier than Start Date.</errorMessage>
</ValidationRule>